--- a/index.html
+++ b/index.html
@@ -387,16 +387,21 @@
         }
 
         function getCardHtml(card) {
-            let cardContent = '';
-            if (currentCategory === 'lecture') {
-                cardContent = `
-                    <a href="${card.youtubeLink}" target="_blank" class="btn btn-primary">Watch Lecture</a>
-                `;
-            } else if (currentCategory === 'material' || currentCategory === 'playground') {
-                cardContent = `
-                    <button class="btn btn-primary" onclick="showMaterialContent(${card.id})">View Content</button>
-                `;
-            }
+        let cardContent = '';
+        if (currentCategory === 'lecture') {
+            // YouTube 링크가 'http://' 또는 'https://'로 시작하는지 확인
+            const youtubeLink = card.youtubeLink.startsWith('http://') || card.youtubeLink.startsWith('https://')
+                ? card.youtubeLink
+                : `https://${card.youtubeLink}`;
+
+            cardContent = `
+                <a href="${youtubeLink}" target="_blank" class="btn btn-primary">Watch Lecture</a>
+            `;
+        } else if (currentCategory === 'material' || currentCategory === 'playground') {
+            cardContent = `
+                <button class="btn btn-primary" onclick="showMaterialContent(${card.id})">View Content</button>
+            `;
+        }
             if (currentCategory === 'playground') {
                 cardContent += `<p><strong>Author:</strong> ${card.author}</p>`;
             }
